--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,219 @@
-#container {
-  text-align: center;
+.header {
+  img {
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
+  }
 
+  .profileImage {
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    position: absolute;
+    top: 85px;
+    left: 10px;
+
+    img {
+      height: 70px;
+      width: 70px;
+      border-radius: 50%;
+      object-fit: cover;
+      border-color: white;
+      border-width: 3px;
+      border-style: solid;
+    }
+  }
+
+  .followButtons {
+    position: absolute;
+    top: 120px;
+    right: 10px;
+
+    .notification {
+      height: 35px;
+      width: 35px;
+      border-radius: 50%;
+      border-color: #d1d1d1;
+      border-width: 1px;
+      border-style: solid;
+
+      ion-icon {
+        margin-top: 8px;
+        vertical-align: middle;
+      }
+    }
+
+    .follow {
+      padding: 5px;
+      padding-left: 10px;
+      padding-right: 10px;
+      border-radius: 20px;
+      border-color: #d1d1d1;
+      border-width: 1px;
+      border-style: solid;
+      font-weight: bold;
+    }
+  }
+}
+
+.profileContent {
+  margin-top: 42px;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  .name {
+    font-size: 24px;
+    font-weight: bolder;
+
+    img{
+      height: 24px;
+      vertical-align: middle;
+    }
+  }
+
+  .username {
+    color: #686868;
+    margin-top: -22px;
+    font-size: 18px;
+
+  }
+
+  .description {
+    margin-top: -8px;
+    font-size: 18px;
+  }
+
+  .links {
+
+    margin-top: -8px;
+    font-size: 18px;
+
+    ion-icon {
+      vertical-align: middle;
+      color: grey;
+    }
+
+    span {
+      color: #4c4c4c;
+      padding-left: 5px;
+      font-size: 18px;
+    }
+
+    .url {
+      color: rgb(0, 161, 225);
+    }
+  }
+}
+
+.followers {
+  margin-top: -18px;
+
+  .text {
+    color: #4c4c4c;
+    font-size: 18px;
+  }
+
+  .number {
+    font-size: 18px;
+    font-weight: bold;
+  }
+}
+
+.followersDetail {
+  margin-top: 5px;
+
+  .parent {
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+
+  img {
+    height: 25px;
+    width: 25px;
+    object-fit: cover;
+    border-radius: 50%;
+
+    border: 1px solid #d1d1d1;
+  }
+
+  .image1 {
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 4;
+  }
+
+  .image2 {
+    position: absolute;
+    z-index: 3;
+    left: 14px;
+  }
+
+  .image3 {
+    z-index: 2;
+    position: absolute;
+    left: 26px;
+  }
+
+  p {
+    margin-top: -8px;
+    font-size: 15px;
+    padding-left: 2px;
+    padding-right: 10px;
+    color: grey;
+  }
+}
+
+
+ion-segment {
+  // sticky segment
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: #fff;
+  margin-top: -10px;
+
+  ion-segment-button {
+    text-transform: none;
+    --color-focused: #4c4c4c;
+    font-weight: bold;
+    font-size: 16px;
+    --color-checked: black;
+    --indicator-height: 3px;
+    --indicator-color: rgb(0, 161, 225);
+    &::part(indicator-background) {
+      border-radius: 20px;
+}
+
+  }
+}
+
+.header1{
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
+  --background: rgba(255, 255, 255, 0);
+  top: 0;
+  width: 100%;
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+ .backbtn{
+    --color: black;
+    --margin-start:10px;
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+    height: 45px;
+    width: 45px;
+    font-size: 10px;
+    --background:rgba(244, 244, 244, 0.627);
+  }
 
-  color: #8c8c8c;
 
-  margin: 0;
-}
+  .search ,.more{
+    margin-right: 10px;
+    font-size: 10px;
+    --color: black;
 
-#container a {
-  text-decoration: none;
+    height: 45px;
+    width: 45px;
+    --background:rgba(244, 244, 244, 0.627);
+  }
+ 
 }
