--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,15 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+@font-face {
+    font-family: AppFont;
+    src: url("./assets/fonts/twitter.ttf"); //change url accordingly
+    }
+    
+    * {
+        font-family: AppFont;
+    }
+    
+    
